# FocusStacker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml
src/focusstacker/: __init__.py  stack.py
src/focusstacker/common/: __init__.py  enums.py  exceptions.py
src/focusstacker/internal/config/: aligner.py  base.py  blender.py
src/focusstacker/internal/models/: decorators.py  factory.py  registry.py  validation.py
src/focusstacker/internal/models/align/: base.py  sift.py
src/focusstacker/internal/models/stack/: base.py  laplacian_pyramid_balanced.py  laplacian_pyramid_max_sharpness.py
src/focusstacker/internal/util/: image.py  resource_monitor.py
tests/: conftest.py
tests/focusstacker/: __init__.py  test_stack.py
tests/focusstacker/internal/: __init__.py
tests/focusstacker/internal/models/: test_factory.py  test_registry.py
tests/focusstacker/internal/util/: __init__.py  test_resource_monitor.py
